styles.css
html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Raleway', sans-serif !important;
}

a:not(.fa) {
    color: white !important;
}

.policy-list a {
    color:  #495057 !important;
    border: none !important;
}

.policy-list .active {
    color: white !important;
    background-color: #86037f !important;
}

a:not(.fa):hover {
    color: #86037f;
}

nav {
    background-color: rgb(51, 58, 64, 0);
    font-size: 2.5rem;
    font-weight: bold;
}

.nav-link:not(.nav-last) {
    border-bottom: 4px solid rgb(51, 58, 64, 0);
}

.nav-link:not(.nav-last):hover, .nav-item>.active:not(.nav-last) {
    border-bottom: 4px solid #86037f;
}

.nav-item {
    margin-left: .5em;
}

.nav-last {
    border: 2px solid #F6C244;
    border-radius: 5px;
}

.nav-last:hover {
    background-color: #F6C244;
    color: #333A40 !important;
}

.feature-row {
    padding: 3rem 0 3rem;
}

#home-container {
    padding: 0;
    background-image: url('images/cover2bw.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;
    width: 100%;
}

#about-container {
    border-bottom: 1px solid white;
}

#policies-container .row {
    min-height: 35vh;
}

.landing-txt {
    font-family: 'Cinzel', serif;
    position: absolute;
    text-align: center;
    margin-right: auto;
    margin-left: auto;
    left: 0;
    right: 0;
    bottom: 0;
    color: #fff;
    font-weight: bold;
    font-size: 6.5rem;
    margin: 0;
}

#landing-txt-warren {
    bottom: 0;
    color: #86037f;
}

#landing-txt-for {
    font-size: 3.5rem;
    color: #86037f;
}

#landing-txt-wooster {
    font-family: 'Bilbo Swash Caps', cursive;
    font-size: 8rem;
    color: #F6C244;
}

#landing-txt-arrow {
    height: 80px;
}

#landing-txt-arrow .material-icons {
    font-size: 5rem;
    color: #86037f;
}

/* Bounce animation for down arrow */
.bounce {
    animation: bounce 2s infinite;
  }
  
  @keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
      transform: translateY(0);
    }
    40% {
      transform: translateY(-30px);
    }
    60% {
      transform: translateY(-15px);
    }
  }

#contact-container {
    padding: 3em;
}

#contact-card {
    position: absolute;
}

.parallax {
    /* The image used */
    background-image: url("images/wide-edit.jpg");

    /* Set a specific height */
    min-height: 500px; 

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
  
.fa-stack:hover {
    opacity: 0.7;
    text-decoration: none;
}

.card-footer {
    padding: .5rem 1.25rem !important;
}

#contact-card {
    position: absolute;
    top: 2rem;
    width: 40em;
    left: 2rem;
    z-index: 99;
}

#map {
    height: 60vh;
    cursor: default !important;
}

.map-wrapper {
    position: relative;
    padding: 0 !important;
}

.tab-pane {
    font-size: 1.5em;
}

/* .accordion button {
    color: black !important;
    font-size: 1.5rem;
} */

.error-div {
    color: red;
}

.success-div {
    color: green;
}

.policy-btn {
    font-size: 1.5rem !important;
}

.mobile-br {
    display: none;
}

#top-icon {
    margin-left: 2rem;
}

@media screen and (max-width: 800px) {
    #contact-card {
        width: 90% !important;
        position: relative;
        margin-left: auto;
        margin-right: auto;
        left: 0;
        margin-bottom: 2em;
    }

    #map {
        display: none;
    }

    nav {
        width: 100vw !important;
        background-color: rgb(51, 58, 64, .8);
    }

    .landing-txt {
        font-size: 18vw;
    }

    #landing-txt-warren, #landing-txt-for, #landing-txt-wooster {
        font-size: auto;
    }

    #donate-btn {
        margin-bottom: 3rem !important;
    }

    .mobile-br {
        display: inline;
    }

    .fa-stack {
        width: 2em !important;
        margin-left: 0px !important;
    }

    #top-icon {
        margin-left: 0;
    }
}

